# 2026_20654922

./: .gitignore  README.md  adder_8h.html  adder_8h.js  adder_8h_source.html  conflict_test.txt  files.html  globals.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: doxygen-deploy.yml
search/: all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  functions_0.js  pages_0.js  searchdata.js
worksheet1/: README.md
worksheet2/: README.md  conflict_demo.txt  conflict_test.txt  git-cheat-sheet.txt  hi_and_date.cmd
worksheet3/: README.md  calc.cpp  hello.cpp
worksheet3/adder_dynamic/include/: adder.h
worksheet3/adder_static/include/: adder.h
worksheet4/: .gitignore  CMakeLists.txt  README.md  SOLUTION.md  calc.cpp
worksheet4/Calc/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
worksheet4/cmake-4.2.3/Help/guide/tutorial/Step1/: CMakeLists.txt
worksheet4/cmake-4.2.3/Help/guide/tutorial/Step1/MathFunctions/: CMakeLists.txt
worksheet4/cmake-4.2.3/Help/guide/tutorial/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
worksheet4/cmake-4.2.3/Source/: CMakeVersion.cmake
worksheet4/dynamic_release/lib/: adder.lib  maths_shared.lib
worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
worksheet4/maths/: CMakeLists.txt
worksheet4/static_release/lib/: adder_static.lib  maths_static.lib
worksheet5/: CMakeLists.txt  Doxyfile  README.md  adder.cpp  adder.h
worksheet6/: .gitignore  CMakeLists.txt  README.md
worksheet6/TreeModel/: main.cpp
worksheet6/exercise1/: CMakeLists.txt
worksheet6/ws6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  OptionDialog.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet7/: .gitignore  README.md
worksheet7/Exercise1/: CMakeLists.txt  CylinderExample.cxx
worksheet7/Exercise3/: CMakeLists.txt  ModelPart.cpp  OptionDialog.h  OptionDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet7/Exercise3/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-Release.cmake  deploy_ws6_766dd48ea8-Debug.cmake  deploy_ws6_766dd48ea8-MinSizeRel.cmake  deploy_ws6_766dd48ea8-Release.cmake
worksheet7/Exercise3/example-stl-main/: README.md
worksheet7/Exercise4/: ModelPart.cpp  ModelPart.h  ModelPartList.cpp  OptionDialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
worksheet7/Exercise4/.qt/: QtDeploySupport-MinSizeRel.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
worksheet7/Exercise4/Cone/: CMakeLists.txt
worksheet7/ws7/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet7/ws7/.qt/: QtDeploySupport-RelWithDebInfo.cmake  deploy_ws6_766dd48ea8-RelWithDebInfo.cmake
