cmake_minimum_required(VERSION 3.19)
project(ws6 LANGUAGES CXX)

# Set ws6 as the default startup project in Visual Studio
if(MSVC)
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ws6)
endif()

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)

set(CMAKE_AUTORCC on)
set(CMAKE_AUTOMOC on)
set(CMAKE_AUTOUIC on)

qt_standard_project_setup()

qt_add_executable(ws6
    WIN32 MACOSX_BUNDLE
    main.cpp
    mainwindow.cpp
    mainwindow.h
    mainwindow.ui
    ModelPart.cpp
    ModelPart.h
    ModelPartList.cpp
    ModelPartList.h
    icons.qrc
    OptionDialog.cpp
    OptionDialog.h
    OptionDialog.ui
)

# --- Automatic DLL Deployment ---
# This part copies the required Qt DLLs to your output folder (e.g., ws6/Debug)
# so the program can find them when you click "Run" in Visual Studio.
if(MSVC)
    get_target_property(_qmake_executable Qt6::qmake IMPORTED_LOCATION)
    get_filename_component(_qt_bin_dir "${_qmake_executable}" DIRECTORY)
    find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")

    if(WINDEPLOYQT_EXECUTABLE)
        add_custom_command(TARGET ws6 POST_BUILD
            COMMAND "${WINDEPLOYQT_EXECUTABLE}" --debug "$<TARGET_FILE:ws6>"
            COMMENT "Copying Qt DLLs for workspace debugging..."
        )
    endif()
endif()

# Find VTK
find_package(VTK REQUIRED
    COMPONENTS
    CommonCore
    RenderingCore
    RenderingOpenGL2
    IOGeometry
    InteractionStyle
    GUISupportQt
    RenderingOpenVR
)

target_link_libraries(ws6
    PRIVATE
    Qt::Core
    Qt::Widgets
    ${VTK_LIBRARIES}
)

# Set up Qt for VTK
vtk_module_autoinit(
    TARGETS ws6
    MODULES ${VTK_LIBRARIES}
)

include(GNUInstallDirs)

install(TARGETS ws6
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET ws6
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
